--- a/hawkeys-client/pom.xml
+++ b/hawkeys-client/pom.xml
@@ -13,4 +13,11 @@
     <name>hawkeys-client</name>
     <version>1.0.1</version>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>3.0-alpha-1</version>
+        </dependency>
+    </dependencies>
 </project>
