create hankeys tcp socket

--- a/hawkeys-client/pom.xml
+++ b/hawkeys-client/pom.xml
@@ -11,13 +11,18 @@
     <artifactId>hawkeys-client</artifactId>
     <packaging>jar</packaging>
     <name>hawkeys-client</name>
-    <version>1.0.1</version>
+    <version>1.0.0</version>
     <url>http://maven.apache.org</url>
     <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>3.0-alpha-1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.hawkeys</groupId>
+            <artifactId>hawkeys-common</artifactId>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
