--- a/hawkeys-core/pom.xml
+++ b/hawkeys-core/pom.xml
@@ -11,4 +11,11 @@
     <version>1.0.1</version>
     <packaging>jar</packaging>
     <url>http://maven.apache.org</url>
+    <dependencies>
+        <dependency>
+            <groupId>com.hawkeys</groupId>
+            <artifactId>hawkeys-common</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+    </dependencies>
 </project>
