--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,12 @@
         <module>hawkeys-netty</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.10</version>
+        </dependency>
+    </dependencies>
+
 </project>
