add hawkeys client tcp

--- a/hawkeys-core/pom.xml
+++ b/hawkeys-core/pom.xml
@@ -17,5 +17,10 @@
             <artifactId>hawkeys-common</artifactId>
             <version>1.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.hawkeys</groupId>
+            <artifactId>hawkeys-client</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
 </project>
