--- a/hawkeys-netty/pom.xml
+++ b/hawkeys-netty/pom.xml
@@ -34,6 +34,11 @@
     </dependency>
     <dependency>
       <groupId>com.hawkeys</groupId>
+      <artifactId>hawkeys-client</artifactId>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.hawkeys</groupId>
       <artifactId>hawkeys-core</artifactId>
       <version>1.0.1</version>
     </dependency>
